ui issue fix, added dark mode to card

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -50,9 +50,9 @@ body {
   }
   .dark {
     --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
+    --foreground: 0 0% 500%;
+    --card: 224 ;
+    --card-foreground: 213;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
     --primary: 0 0% 98%;
